Updated run instructions